src/styles/hometemp.css
* {
    margin: 0;
    padding: 0;
    /* box-sizing: border-box; */
    /* overflow-x: hidden; */
    scroll-behavior: smooth;
    --frame_height: 600px;
    --bg_theme: greenyellow;
    --glass: #c0c0c015;
    --content_origin: 200px;
    --content_height: 2000px;
    --ctn_box_height: 400px;
    --skyfall:
        linear-gradient(
            rgb(7, 65, 238),
            rgb(0, 102, 255) 10%,
            rgb(0, 179, 255),
            rgb(255, 128, 149) 80%,
            rgb(224, 123, 140),
            pink
        );
}

/* .gradic {
    height: 650px;
    width: 100%;
    background-color: red;
} */

*::-webkit-scrollbar{
    width: 0;
}

.master_frame {
    position: relative;
    top: 0;
    width: 100vw;
    min-height: var(--frame_height);
    height: var(--frame_height);
    max-height: var(--frame_height);
    background: var(--skyfall);
    pointer-events: none;
    font-family: 'nunito';
}
.smarty {
    font-family: 'smartpeople', Helvetica, sans-serif;
    font-weight: bold;
}
.sub_smarty {
    font-family: 'refbeverage', Helvetica, sans-serif;
    text-shadow: 2px 2px 2px gray;
    font-weight: bold;
}
.cs_item {
    position: absolute;
    min-height: 70px;
    min-width: 150px;
    background-size: contain;
    background-position: center;
    will-change: transform;
    /* border: 2px solid salmon; */
}

.cs_0 {
    top: 7%;
    left: 15%;
    height: 9.3rem;
    width: 15rem;
}
.cs_1 {
    top: 38%;
    right: 15%;
    width: 12rem;
    height: 100px;
    z-index: 2;
}
.cs_2,
.cs_x {
    width: 60vw;
    height: 180px;
    top: 20%;
    left: 20%;
    display: flex;
    align-items: center;
    justify-content: center;
}
.cs_2 p{
    font-size: 5.5rem;
}
.cs_x {
    top: 40%;
}

.cs_3 {
    top: 80%;
    width: 40%;
    height: 100px;
}

.cs_0, .cs_1, .cs_3 {
    background-image: url('/public/img/cloud.png');
    background-repeat: no-repeat;
    background-size: contain;
}

/* quick custom fit for tablets */

@media only screen and (max-width: 700px){
    .cs_0 {
        top: 0;
    }
    .cs_2 {
        left: 20%;
        top: 17%;
    }
    .cs_2 p{
        font-size: 4.3rem;
    }
    .cs_x {
        top: 33%;
    }
    .cs_3 {
        top: 73%;
    }
}
/* end quick custom fit*/



.container{
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    /* border: 2px solid red; */
}

.scroll_1 {
    position: fixed;
    top: 350px;
    left: 5%;
    z-index: 99;

    width: 130px;
    height: 150px;
    transition:
        background-image 0.5s ease-in-out,
        background-color 0.5s ease-in-out,
        left 0.5s ease,
        top 0.8s ease-in-out,
        transform 0.5s ease;
    color: transparent;

    background-image: url('/public/img/stby_0.png');
}

.scr_active {
    animation-name: quibbleIMG;
    animation-duration: 1.2s;
    animation-timing-function: ease;
    animation-delay: 0.01s;
    animation-iteration-count: infinite;
    animation-fill-mode: forwards;
    animation-direction: alternate-reverse;
}

@keyframes quibbleIMG {
    0%{
        background-image: url('/public/img/stby_0.png');
    }
    20%{
        background-image: url('/public/img/stby_1.png');
    }
    40%{
        background-image: url('/public/img/stby_2.png');
    }
    60%{
        background-image: url('/public/img/stby_3.png');
    }
    80%{
        background-image: url('/public/img/stby_4.png');
    }
    100%{
        background-image: url('/public/img/stby_5.png');
    }
    
}

/* resize quibble for desktops */
@media only screen and (min-width: 1200px){
    .scroll_1 {
        width: 200px;
        height: 225px;
    }
}
/* end resize */

.content {
    position: relative;
    height: var(--content_height);
    background-color: pink;
    pointer-events: none;
}

.ctn_box {
    position: absolute;
    top: 0;
    width: 350px;
    height: var(--ctn_box_height);
    background-color: aqua;
}

.ctn_0 {
    top: var(--content_origin);
    left: 10px;
}

.ctn_1 {
    top: calc(4 * var(--content_origin));
    right: 10px;
}
.ctn_2 {
    top: calc(6.5 * var(--content_origin));
    left: 10px;
}

@media only screen and (min-width: 1100px){
    .cs_1{
        width: 17rem;
        height: 10rem;
        right: 30%;
    }

    .ctn_box {
        width: 450px;
    }
    .ctn_0 {
        top: var(--content_origin);
        left: 100px;
    }
    .ctn_1 {
        top: calc(3.5 * var(--content_origin));
        width: 500px;
        right: 100px;
    }
    .ctn_2 {
        top: calc(6.5 * var(--content_origin));
        left: 200px;
    }
}

.extra {
    position: absolute;
    top: 2350px;
    width: 90vw;
    left: 5vw;
    height: 200px;
    background-color: red;
    /* transform: scale(0); */
    transition: transform 0.5s ease-in-out;
}

